--- a/.github/workflows/telnyx-webdriverio.yml
+++ b/.github/workflows/telnyx-webdriverio.yml
@@ -1,47 +1,51 @@
-name: Telnyx webdriverIO tests
+name: Telnyx webdriverIO
 
-on: 
+on:
   push:
-    branches: 
+    branches:
       - main
   pull_request:
     branches:
       - main
+
 jobs:
-  build:
+  test-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
 
-      - name: Install dependencies
-        run: npm install
+    - name: Install dependencies
+      run: npm install
 
-      - name: Run tests
-        run: npm run test:all
+    - name: Run tests
+      run: npm run test:all
 
-      # - name: Build Docker image
-      #   run: npm run docker:build
+    - name: Generate Allure report
+      run: npm run allure:generate
 
-      # - name: Run Docker container
-      #   run: npm run docker:run
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./allure-report
+        publish_branch: gh-pages
 
-      - name: Generate allure report
-        run: npm run allure:generate
+  docker-build-and-run:
+    runs-on: ubuntu-latest
 
-      - name: Deploy to Github Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./allure-report
-          publish_branch: gh-pages
-      
-     
-    
-    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Build Docker image
+      run: docker build -t telnyx-webdriverio-tests .
+
+    - name: Run Docker container
+      run: docker run -d --name telnyx-webdriverio-tests telnyx-webdriverio-tests
